# tscc

./: .clang-format  .editorconfig  .gitignore  .prettierignore  LICENCE.txt  README.md  build.sh  fmt.sh  package-lock.json  package.json  roadmap.md  tsconfig.json
cpp_stl/: .gitignore  CMakeLists.txt  Makefile
cpp_stl/include/: end.h  macro.h  stl.h
cpp_stl/src/: console.cc  string.cc
cpp_stl/tests/: array.cc
doc/: objects_and_gc.md
example/: .gitignore  br.sh  example.ts  printDouble.c
src/: c_factory.ts  c_gen_pass.ts  cpp_factory.ts  cpp_gen_pass.ts  cpp_infer_pass.ts  err.ts  error_emitter.ts  gen.ts  infer_pass.ts  intrinsics.ts  js-sha1.d.ts  main.ts  scope.ts  type_visitor.ts  types.ts  typescript.d.ts  visitor.ts
src/definitions/: typescript.d.ts
stl/: Makefile  rc.c  stl.h
stl/include/: end.h  macro.h  stl.h
stl/src/: array.c  console.c  number.c  string.c
